# nano_RMVision

./: .gitignore  CMakeLists.txt  README.md
config/: camera_config.yaml  camera_config_info.yaml
inc/: ArmorDetect.hpp  ArmorExtension.hpp  CameraUI.h  ConfigManager.h  SimpleCamera.h  camdrv.hpp  infer.h
model/: last.xml  last.yaml
src/: camdrv.cpp  camera_ui.cpp  cammod.cpp  config_manager.cpp  main.cpp  simple_camera.cpp
